--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 	height: 100vh;
 	display: flex;
 	justify-content: center;
-	background-color: #1E1E1E;
+	background-color: #C0D7EE;
 	padding: 30px 0px;
 
 	&__{
@@ -11,6 +11,10 @@
 		&content {
 			width: 100%;
 			max-width: 600px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 30px;
 		}
 	}
 }
