--- a/src/components/Balance/Balance.module.scss
+++ b/src/components/Balance/Balance.module.scss
@@ -1,12 +1,9 @@
 .balance {
-    background: rgba(255, 255, 255, 0.42);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8.4px);
-    -webkit-backdrop-filter: blur(8.4px);
-    box-shadow: 7px 12px 12px -4px rgba(0,0,0,0.14);
-    -webkit-box-shadow: 7px 12px 12px -4px rgba(0,0,0,0.14);
-    -moz-box-shadow: 7px 12px 12px -4px rgba(0,0,0,0.14);
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 1px );
+    -webkit-backdrop-filter: blur( 1px );
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 8px;
