--- a/src/components/Balance/Balance.module.scss
+++ b/src/components/Balance/Balance.module.scss
@@ -1,9 +1,7 @@
+@import '../../assets/styles/variables.scss';
+
 .balance {
-    background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 1px );
-    -webkit-backdrop-filter: blur( 1px );
-    border-radius: 10px;
+    @include glass-background;
     display: flex;
     flex-direction: column;
     gap: 8px;
