--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,16 @@
-.App {
- 	text-align: center;
+.app {
   	width: 100%;
 	height: 100vh;
+	display: flex;
+	justify-content: center;
+	background-color: #1E1E1E;
+	padding: 30px 0px;
+
+	&__{
+
+		&content {
+			width: 100%;
+			max-width: 600px;
+		}
+	}
 }
