--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
+@import './assets/styles/variables.scss';
+
 .app {
   	width: 100%;
-	height: 100vh;
+	height: 100%;
+	min-height: 100vh;
 	display: flex;
 	justify-content: center;
 	background-color: #C0D7EE;
@@ -15,6 +18,12 @@
 			flex-direction: column;
 			align-items: center;
 			gap: 30px;
+
+			&__{
+				&form {
+					@include glass-card;
+				}
+			}
 		}
 	}
 }
